fixed cropping of over-sized collection images

--- a/style.scss
+++ b/style.scss
@@ -307,10 +307,10 @@ ul.collection-mods-page-attrib-tooltip {
     height: 100%;
 
     > img {
-      max-width: 100%;
-      max-height: 100%;
-      width: auto;
-      height: auto;
+      width: 100%;
+      height: 100%;
+      object-position: center;
+      object-fit: cover;
     }
   }
 
